# zero-to-production

./: Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
scripts/: init_db.sh
