[package]
name = "zero2prod"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.143"
config = { version = "0.13.2", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4.21"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
log = "0.4"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
thiserror = "1.0.32"
serde-aux = "3"
unicode-segmentation = "1.9.0"
rand = { version = "0.8", features=["std_rng"] }
anyhow = "1.0.61"
base64 = "0.13.0"
argon2 = { version = "0.4", features = ["std"] }
validator = "0.16.0"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
serde_json = "1"
actix-web-lab = "0.16"

[dev-dependencies]
once_cell = "1.13.0"
claim = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.5.0"
wiremock = "0.5"
serde_json = "1.0.83"
linkify = "0.9.0"
serde_urlencoded = "0.7.1"
